--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,8 @@
 
     <EditText
         android:id="@+id/editTextName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="416dp"
+        android:layout_height="53dp"
         android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -59,5 +59,23 @@
         android:text="Testons"
         tools:layout_editor_absoluteX="111dp"
         tools:layout_editor_absoluteY="520dp" />
+
+    <Button
+        android:id="@+id/debog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="debog"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="79dp" />
+
+    <Button
+        android:id="@+id/debog2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="debog2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
